test/parse/expr/bad-try-sig-multi.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-exceptions
;;; ERROR: 1
(module
  (func
    try (result i32 i32)
      i32.const 1
      i32.const 2
    catch
      drop  ;; drop exnref
      i32.const 3
      i32.const 4
    end
    return)

  (func
    i32.const 0
    try (param i32)
      drop
    catch
      drop  ;; drop exnref
    end
    return))
(;; STDERR ;;;
out/test/parse/expr/bad-try-sig-multi.txt:6:5: error: multiple try results not currently supported.
    try (result i32 i32)
    ^^^
out/test/parse/expr/bad-try-sig-multi.txt:18:5: error: try params not currently supported.
    try (param i32)
    ^^^
;;; STDERR ;;)
